--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
                             <a href="">ILLUSTRATOR</a>
                         </li>
                         <li>
-                            <a href="iindex2.html">WEB DESIGN</a>
+                            <a href="index2.html">WEB DESIGN</a>
                         </li>
                     </ul>
                 </li>
