Update and rename index2.html to wdesign.html

--- a/wdesign.html
+++ b/wdesign.html
@@ -9,7 +9,7 @@
     <section class="hero">
         <nav>
             <ul>
-                <li><a href="index1.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li>
                     <a href="">TUTORIALS <i style="margin-left: 10px;" class="fa-solid fa-caret-down"></i></a>
                     <ul class="dropdown">
@@ -20,7 +20,7 @@
                             <a href="">ILLUSTRATOR</a>
                         </li>
                         <li>
-                            <a href="index2.html">WEB DESIGN</a>
+                            <a href="wdesign.html">WEB DESIGN</a>
                         </li>
                     </ul>
                 </li>
